# algorithmite-website

./: .env  .gitignore  Cargo.toml  ExampleRocket.toml  LICENSE  README.md  diesel.toml  run.sh  run_commands.sh  run_commands.txt  setup_commands.txt
client/: Cargo.toml  main.js  rollup.config.js  setup commands.txt
client/src/: index.scss  lib.rs  main.js  normalize.scss
client/src/shader/: background.frag
client/src/structure/: app.rs  background.rs  layout.rs  mod.rs
client/src/structure/layout/: mod.rs
client/src/structure/menu/: mod.rs
client/static/: index.html
client/www/: index.html
migrations/2021-10-26-181036_algorithmite_initial_setup/: up.sql
server/: Cargo.toml  diesel.toml
server/migrations/2021-10-26-181036_algorithmite_initial_setup/: down.sql  up.sql
server/src/: main.rs
server/src/model/api/: mod.rs  moderation_actions.rs  password.rs  roles.rs  routes.rs
server/src/model/database/: finalized_schema.rs  generated_schema.rs  queryable.rs
src/: action_schema.rs  main.rs  models.rs  schema.rs
src/model/: finalized_schema.rs  generated_schema.rs  mod.rs  model_enums.rs  queryable.rs
src/model/api/: mod.rs  moderation_actions.rs  roles.rs  routes.rs  user_actions.rs  users.rs
src/model/database/: finalized_schema.rs  generated_schema.rs  insertable.rs  mod.rs  model_enums.rs  queryable.rs
