[package]
name = "algorithmite-website"
version = "0.1.0"
authors = ["algorithmite <algorithmite@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
diesel = { version = "1.4", features = ["chrono"] }
diesel-derive-enum = { version = "1.1", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
default-features = false
features = ["handlebars"]

[dev-dependencies]
serial_test = "0.5.1"
