[package]
name = "algorithmite-website-client"
version = "0.1.0"
authors = ["algorithmite <algorithmite@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.19"
wasm-bindgen = "0.2"
js-sys = "0.3"
gloo-render = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
]
